# SecretChat

./: .gitignore  LICENSE
client/src/: main.cpp
common/: client.cpp  message_data.cpp  message_data.hpp  socket.cpp  socket.hpp
mongo/: README.md  docker-compose.yaml  mongo.cpp  mongo.hpp
mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1376225780248869797.wt  collection-0--7566241702447689616.wt  collection-2--7566241702447689616.wt  collection-7--7566241702447689616.wt  index-1--1376225780248869797.wt  index-1--7566241702447689616.wt  index-3--7566241702447689616.wt  index-8--7566241702447689616.wt  index-9--7566241702447689616.wt  sizeStorer.wt
mongo/data/diagnostic.data/: metrics.2025-05-06T10-59-31Z-00000  metrics.2025-05-06T10-59-34Z-00000  metrics.2025-05-06T11-05-35Z-00000  metrics.2025-05-06T11-25-08Z-00000  metrics.2025-05-06T11-45-16Z-00000  metrics.2025-05-06T11-56-49Z-00000
qt_client/: CMakeLists.txt  client.hpp  main.cpp  qt_client.hpp  readme.txt  run.sh  test_server.cpp
qt_client/include/: LoginService.hpp  LoginView.hpp
qt_client/src/: LoginService.cpp  LoginView.cpp
server/: Makefile  clang-format  main.cpp  message_data.hpp  server.cpp
server/client_test/: client_test.cpp
server/data/: users
